[env]
CARGO_MAKE_EXTEND_WORKSPACE_MAKEFILE = true

[workspace]

members = [
	"blake2",
	"fsb",
	"gost94",
	"groestl",
	"k12",
	"md2",
	"md4",
	"md5",
	"ripemd",
	"sha1",
	"sha2",
	"sha3",
	"shabal",
	"sm3",
	"streebog",
	"tiger",
	"whirlpool",
]

[profile.release]
debug = false
lto = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1
