[workspace]

members = [
	"e",
	"frac_1_pi",
	"frac_1_sqrt_2",
	"frac_2_pi",
	"frac_2_sqrt_pi",
	"frac_pi_2",
	"frac_pi_3",
	"frac_pi_4",
	"frac_pi_6",
	"frac_pi_8",
	"ln_10",
	"ln_2",
	"log10_2",
	"log10_e",
	"log2_10",
	"log2_e",
	"pi",
	"sqrt_2",
	"tau",
]

[profile.release]
debug = false
lto = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1
