[workspace]

members = [
	"all_languages",
	"all_languages_with_arabic_script",
	"all_languages_with_cyrillic_script",
	"all_languages_with_devanagari_script",
	"all_languages_with_latin_script",
	"all_spoken_languages",
	"detect",
	"detect_confidence",
	"tag",
]

[profile.release]
debug = false
lto = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1
