[env]
CARGO_MAKE_EXTEND_WORKSPACE_MAKEFILE = true

[workspace]

members = [
    "damerau_levenshtein",
    "hamming",
    "jaro",
    "jaro_winkler",
    "levenshtein",
    "normalized_damerau_levenshtein",
    "normalized_levenshtein",
    "osa_distance",
    "sorensen_dice",
]

[profile.release]
debug = false
lto = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1
