[package]
name = "reverse"
version = "1.0.0"
authors = [""]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0.59" }
stardog_function = { git = "https://github.com/semantalytics/stardog-webfunctions" }

[dev-dependencies]
tracing = "0.1.33"
tracing-subscriber = "0.3.11"
test-env-log = { version = "0.2.8", default-features = false, features = ["trace"] }
dockertest = "0.2.1"
