[package]
name = "wasi-tensorflow-inference"
version = "0.1.0"
authors = ["Radu M <root@radu.sh>"]
edition = "2018"


[dependencies]
base64 = "0.13.0"
serde = { version = "1.0.136", features = [ "derive" ] }
serde_json = { version = "1.0.79" }
anyhow = "1.0.56"
stringreader = "0.1.1"

tensorflow = "0.16.0"
image = { version = "0.24.1", default-features = false, features = ["jpeg"] }
stardog_function = { git = "https://github.com/semantalytics/stardog-webfunctions" }

[lib]
crate-type = ["cdylib"]
