[package]
name = "all_languages_with_devanagari_script"
version = "0.1.0"
authors = ["Zachary Whitley <zachary.whitley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0.59" }
stardog_function = { git = "https://github.com/semantalytics/stardog-webfunctions" }
lingua = { git = "https://github.com/semantalytics/lingua-rs", branch="wasm-feature" }