[package]
name = "whatlang"
version = "1.0.0"
authors = [""]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.136", features = [ "derive" ] }
serde_json = { version = "1.0.79" }
whatlang = { version = "0.13.0" }
stardog_function = { git = "https://github.com/semantalytics/stardog-webfunctions" }
isolang = "2.1.0"