[package]
name = "damerauLevenshtein"
version = "0.1.0"
authors = ["Zachary Whitley <zachary.whitley@semantalytics.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.136", features = [ "derive" ] }
serde_json = { version = "1.0.79" }
stardog_function = { git = "https://github.com/semantalytics/stardog-webfunctions" }
strsim = "0.10.0"

[dev-dependencies]
ureq = { version = "2.4.0", features = [ "json" ] }
base64 = "0.13.0"
