[package]
name = "wasm2wat"
version = "0.1.0"
authors = ["Zachary Whitley <zachary.whitley@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0" }
wasmprinter = { version = "0.2.0" }
base64 = { version = "0.3.0" }
stardog_function = { git = "https://github.com/semantalytics/stardog-webfunctions" }
